second update -- about 80/85% done

--- a/src/app/admin/products/product-list/product-list.component.html
+++ b/src/app/admin/products/product-list/product-list.component.html
@@ -1,9 +1,11 @@
 <h1 class="text-center mt-3">
-  Listado de Tiendas
+  Listado de Productos
 </h1>
 
+<app-spinner *ngIf="loading"></app-spinner>
+
 <!-- mobile -->
-<div fxHide.gt-xs="true">
+<div *ngIf="!loading" fxHide.gt-xs="true">
   <p>CELULAR</p>
   <div *ngFor="let product of productsList">
     <mat-card class="mb-2 pb-4">
@@ -37,7 +39,7 @@
 </div>
 
 <!-- bigger than mobile -->
-<div fxHide.lt-sm="true">
+<div *ngIf="!loading" fxHide.lt-sm="true">
   <p>TABLET +</p>
   <div *ngFor="let product of productsList">
     <mat-card class="mb-2 pb-4">
