--- a/src/app/admin/stores/stores.component.html
+++ b/src/app/admin/stores/stores.component.html
@@ -1,5 +1,8 @@
 <div class="container mt-5">
   <h1 class="text-center">Sección de Tiendas</h1>
-  <app-store></app-store>
-  <app-store-list></app-store-list>
+
+  <div id="content-container">
+    <app-store></app-store>
+    <app-store-list></app-store-list>
+  </div>
 </div>
